Work with encoded and un-encoded URLs